# EletivasC

./: CMakeLists.txt
src/aula1/: aula1.c
src/aula2/: aula2.c
src/aula3/: aula3.c
src/aula4/: aula4.c
src/aula5/: aula5.c
src/aula6/: aula6.c
src/aula7/: aula7.c
src/aula8/: aula8-server.c
